2005-02-02  Ben Maurer  <bmaurer@ximian.com>

	* reflection.c, appdomain.c: Replace a few manual searches that
	Zoltan missed. (Paolo approved this part of my initial patch).

Wed Feb 2 16:32:08 CET 2005 Paolo Molaro <lupus@ximian.com>

	* profiler.c: disable recording statistical events at report time.

Wed Feb 2 14:14:00 CET 2005 Paolo Molaro <lupus@ximian.com>

	* icall.c: patch from Geoff Norton <gnorton@customerdna.com>
	to byteswap arrays of enum values, too (bug #72080).

2005-02-02  Zoltan Varga  <vargaz@freemail.hu>

	* appdomain.c (set_domain_search_path): Allow this to be called if
	domain->setup is not yet set.

	* loader.c (mono_method_get_index): New helper function.

	* loader.c reflection.c: Use mono_method_get_index ().

	* class.c (mono_class_get_method_from_name_flags): New helper method.

	* debug-helpers.h debug-helpers.c (mono_find_method_by_name): Remove
	this.

	* class.c (mono_class_get_cctor): New helper method.

	* string-icalls.c object.c class.c marshal.c reflection.c: Use
	mono_class_get_method () to look up methods.

2005-02-01  Miguel de Icaza  <miguel@novell.com>

	* console-io.c: Fix the build, this should work on Windows.

2005-01-31  Ben Maurer  <bmaurer@ximian.com>

	* marshal.c (mono_marshal_xdomain_copy_out_value): cached_str must
	be set to null to keep things valid

2005-01-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: added Console 2.0 icalls.
	* Makefile.am: added console-io.[ch]
	* console-io.[ch]: internal calls for Console 2.0 API.

Mon Jan 31 19:01:29 CET 2005 Paolo Molaro <lupus@ximian.com>

	* class.c: make sure we consider all the interfaces
	when calculating max_interface_id (bug found by
	Jeroen Frijters running ikvm).

2005-01-31  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_FieldInfo_SetValueInternal): Handle setting of
	valuetype fields to null.

	* object.c (set_value): Ditto. Fixes #71669.	

2005-01-31  Martin Baulig  <martin@ximian.com>
